WebCore/html/HTMLInputElement.h
@@ -144,6 +144,9 @@ public:
     virtual void setValue(const String&, bool sendChangeEvent = false);
     virtual void setValueForUser(const String&);
 
+    double valueAsDate() const;
+    void setValueAsDate(double, ExceptionCode&);
+
     virtual String placeholder() const;
     virtual void setPlaceholder(const String&);
 
